--- a/JWeb/web/add.html
+++ b/JWeb/web/add.html
@@ -7,8 +7,9 @@
 <body>
     <div id="div_container">
       <div id="div_fruit_list">
-          <p class="center f30">添加库存信息2</p>
-          <form action="/add.do" method="post">
+          <p class="center f30">添加库存信息</p>
+          <form action="/fruit.do" method="post">
+              <input type="hidden" name="operate" value="add">
             <table id="tbl_fruit">
               <tr>
                 <th class="w20">名称: </th>
