--- a/JWeb/web/index.html
+++ b/JWeb/web/index.html
@@ -10,6 +10,11 @@
       <div id="div_fruit_list">
           <p class="center f30">欢迎使用水果库存后台管理系统</p>
           <div style="width:60%;margin-left: 20%; text-align: right">
+              <form th:action="@{/fruit.do}" method="post" style="float: left">
+                  <input type="hidden" name="oper" value="search">
+                  请输入查询关键字： <input type="text" name="keyword">
+                  <input type="submit" value="查询" class="btn">
+              </form>
               <a th:href="@{/add.html}">添加记录</a>
           </div>
         <table id="tbl_fruit">
@@ -23,12 +28,18 @@
               <td colspan="4">对不起，库存为空！</td>
           </tr>
           <tr th:unless="${#lists.isEmpty(session.fruitList)}" th:each="fruit : ${session.fruitList}">
-            <td ><a th:text="${fruit.fname}" th:href="@{/edit.do(fid=${fruit.fid})}">苹果</a></td>
+            <td ><a th:text="${fruit.fname}" th:href="@{/fruit.do(fid=${fruit.fid},operate='edit')}">苹果</a></td>
             <td th:text="${fruit.price}">5</td>
             <td th:text="${fruit.fcount}">20</td>
             <td><img src="imgs/del.jpg" class="delImg" th:onclick="|delFruit(${fruit.fid})|"></td>
           </tr>
         </table>
+          <div style="width: 60%;margin-left: 20%; padding-top: 4px" class="center">
+              <input type="button" value="首  页" class="btn" th:onclick="page(1)" th:disabled="${session.pageNo==1}">
+              <input type="button" value="上一页" class="btn" th:onclick="|page(${session.pageNo-1})|" th:disabled="${session.pageNo==1}">
+              <input type="button" value="下一页" class="btn" th:onclick="|page(${session.pageNo+1})|" th:disabled="${session.pageNo==session.pageCount}">
+              <input type="button" value="尾  页" class="btn" th:onclick="|page(${session.pageCount})|" th:disabled="${session.pageNo==session.pageCount}">
+          </div>
       </div>
     </div>
 
